--- a/KriddieFolder/Geomorphology_Script/COLM_Geomorphology_2024-08-30.Rmd
+++ b/KriddieFolder/Geomorphology_Script/COLM_Geomorphology_2024-08-30.Rmd
@@ -20,6 +20,7 @@ library(sp)
 library(geosphere)
 library(ggmap)
 library(data.table)
+library(MALDIquant)
 
 
 #funtion
@@ -261,7 +262,7 @@ ok sweet that looks really good
 
 We also need to snap the synoptic df (for later)
 ```{r snap synop pts}
-synop
+
 x <- SpatialPoints(synop[,c(1:2)])
 y <- SpatialPoints(df_prediction[,c(1:2)]) 
 plot(x, col = "red")
