--- a/KriddieFolder/Geomorphology_Script/GAVItrib3_Geomorphology_2024-09-09.Rmd
+++ b/KriddieFolder/Geomorphology_Script/GAVItrib3_Geomorphology_2024-09-09.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Geomorphology_GAVI"
+title: "Geomorphology_GAVI trib3"
 author: "KWhitmore"
 date: "12/09/2021"
 output: html_document
@@ -75,21 +75,25 @@ Geomorph$time <-Geomorph$time - 5*60*60
 #round to nearest half second
 Geomorph$time <- round_date(Geomorph$time, unit = "30 second")
 
-#Geomorph_2 <- subset(Geomorph,
-#      time > as.POSIXct('2021-07-27 10:50:00', tz="UTC")&
-#        time < as.POSIXct('2021-07-27 11:12:00', tz="UTC"))
+Geomorph_2 <- Geomorph%>%filter(ele > 4100)
+##
 
-Geomorph_2 <- subset(Geomorph,
-      time > as.POSIXct('2021-07-27 11:16:00', tz="UTC")&
-        time < as.POSIXct('2021-07-27 11:36:00', tz="UTC"))
+Geomorph_3 <- subset(Geomorph_2,
+      time > as.POSIXct('2021-07-27 14:38:30', tz="UTC")& time < as.POSIXct('2021-07-27 14:55:00', tz="UTC") )
 
+
+Geomorph_4 <- subset(Geomorph_2,
+      time > as.POSIXct('2021-07-27 14:38:30', tz="UTC")& time < as.POSIXct('2021-07-27 15:00:30', tz="UTC") 
+      )
+
+Geomorph_5 <- subset(Geomorph_2,
+      time > as.POSIXct('2021-07-27 14:24:30', tz="UTC")& time < as.POSIXct('2021-07-27 14:32:00', tz="UTC") )
 
 
 ```
 
 
 Let's do the synoptic one trib at a time
-
 
 ```{r add synop to df}
 #synop <- read.csv(here::here("Synoptic/GAVI.csv"))
@@ -100,32 +104,29 @@ synop <- read.csv(here::here("Synoptic/GAVI_2022-06-04.csv"))
 synop$X <- NULL
 
 colnames(synop) <- c("lon","lat","Date","EOS_no","Flux_ave", "Tract","Point","VaisalaType","CO2_ppm_ave","WaterTemp_c","BaroPress_kpa","AirTemp_c","Total_hPa","adjusted_ppm","DateTime","SampleID","DOC","TDN","ID","Notes")
-synop <- synop[,c("lat","lon","Date","EOS_no","Flux_ave", "Tract","Point","VaisalaType","CO2_ppm_ave","WaterTemp_c","BaroPress_kpa","AirTemp_c","Total_hPa","adjusted_ppm","DOC","TDN")]
-
+synop <- synop%>%select(lat,lon,Date,EOS_no,Flux_ave,Tract,Point,VaisalaType,CO2_ppm_ave,WaterTemp_c,BaroPress_kpa,AirTemp_c,Total_hPa,adjusted_ppm,DOC,TDN)
+synop$Date <- as.Date(synop$Date,format="%m/%d/%y")
 
 #stream that goes up to the refuge
-Synop_2 <- synop %>% filter(Date == "6/23/21" & Tract == 1)
+Synop_2_1 <- synop %>%
+  filter(EOS_no == "EOS1") %>%
+  filter(Date == "2021-06-30" | Date == "2021-06-29") %>%
+  filter(Tract==2)
+
+Synop_2_2 <- synop %>%
+  filter(EOS_no == "EOS1") %>%
+  filter(Date == "2021-06-30" & Tract==1) 
+
+Synop_2 <- rbind(Synop_2_1,Synop_2_2)
+rm(Synop_2_1,Synop_2_2)
 
 ```
-
-```{r look at all synop data}
-
-df <- full_join(Synop_2,Geomorph_2, by=c("lat","lon")) 
-
-
-
-TrackMap_geo <- qmplot(lon, lat, data = Geomorph_2, zoom = 13, maptype = "toner-background")
-TrackMap_geo
-
-```
-
-
 
 ```{r first spline, echo=FALSE}
 
 #Cut up lat long into peices, and then fit spline
 
-Geomorph_sub <- Geomorph_2 
+Geomorph_sub <- Geomorph_5
 model <- lm(lon~bs(lat,
                    degree = 3),
             data=Geomorph_sub)
@@ -337,11 +338,11 @@ I'm really hoping this finaly product looks good
 df_prediction <- df_prediction%>%select(lon_fit,lat_fit,ele_fit,dist_diff,Date,Point,Flux_ave,CO2_ppm_ave,adjusted_ppm,AirTemp_c,Total_hPa,VaisalaType,EOS_no)%>%rename(dist=dist_diff)
 df_prediction <- unique(df_prediction)
 
-##check should have 32 synop points 
+##check should have 7 synop points 
 check <- df_prediction%>%drop_na(Date)
 
-#write.csv(df_prediction, here::here("ProcessedData/gaviTrib2_synoptic_2024-09-04.csv"))
-#write.csv(check, here::here("ProcessedData/gaviTrib2_synopticpoints_arcpro_2024-09-04.csv"))
+#write.csv(df_prediction, here::here("ProcessedData/gaviTrib3_synoptic_2024-09-04.csv"))
+#write.csv(check, here::here("ProcessedData/gaviTrib3_synopticpoints_arcpro_2024-09-04.csv"))
 
 ```
 
@@ -352,10 +353,10 @@ and also df_prediction for trouble shooting purposes
 
 ```{r x and w and d, echo=FALSE}
 
-df_prediction <- read.csv(here::here("ProcessedData/gaviTrib2_synoptic_2024-09-04.csv"))
+df_prediction <- read.csv(here::here("ProcessedData/gaviTrib3_synoptic_2024-09-04.csv"))
 df_prediction$X <- NULL
 
-XWD <- read.csv(here::here("Geomorphology/Gavilan/GAVItrib2_2024-09-09.csv"))
+XWD <- read.csv(here::here("Geomorphology/Gavilan/GAVItrib3_2024-09-10.csv"))
 XWD <- XWD%>%select(lon,lat,x_new,d,w,ele,notes)%>%rename(x=x_new)
 
 XWD_save <- XWD[order(XWD$x),]
