--- a/KriddieFolder/Synoptic_Script/SynopFigures_2024-09-13.Rmd
+++ b/KriddieFolder/Synoptic_Script/SynopFigures_2024-09-13.Rmd
@@ -287,13 +287,12 @@ figure2 <- ggarrange(figure1, p3,
 #slope fig
 
 ```{r fig 4 boxplots, echo=FALSE}
-df_wide_all <- read.csv(here::here("ProcessedData/Synop_slope_2024-05-07.csv"))
+df <- read.csv(here::here("ProcessedData/raymond_data_allsites_2024-09-16.csv"))
 
-df_wide_all[df_wide_all < 0] <- 0
 
-model1.2 <- lm(log(pCO2_ppm) ~ scale(log1p(slope_m.m)) +
-                 scale(log(CatchmentSize_ha))
-, data = df_wide_all %>%filter(CatchmentSize_ha > 12.5)
+model1.2 <- lm(log(adjusted_ppm) ~ scale(log1p(slope_up)) #+
+#                 scale(log(catchment_ha))
+, data = df %>%filter(catchment_ha > 12.5)
                )
 summary(model1.2)
 
@@ -303,8 +302,8 @@ ols_test_normality(model1.2)
 
 theme_set(theme_bw(base_size = 16))
 
-p <- ggplot(df_wide_all  %>%filter(CatchmentSize_ha > 12.5), 
-       aes(x=slope_m.m,y=pCO2_ppm, color=CatchmentSize_ha)) +
+p <- ggplot(df  %>%filter(catchment_ha > 12.5), 
+       aes(x=slope_up,y=adjusted_ppm, color=catchment_ha)) +
   scale_y_continuous(trans = "log10", breaks=c(300,1000,3000,10000), labels=c("300","1,000","3,000","10,000")) +
   geom_point(size=2) +
   geom_smooth(method = "lm",color="black") +
@@ -329,21 +328,20 @@ p <- ggplot(df_wide_all  %>%filter(CatchmentSize_ha > 12.5),
 Box plots
 ```{r fig 4 boxplots, echo=FALSE}
 
-df<-read.csv(here::here("ProcessedData/raymond_data_allsites_2024-09-13.csv"),na.strings=c("","NA"))
+df <-read.csv(here::here("ProcessedData/raymond_data_allsites_2024-09-16.csv"),na.strings=c("","NA"))
 df$name_2 <- df$name
 df$name_2[which(df$name_2 == "GaviTrib1")] = "GaviTribs"
 df$name_2[which(df$name_2 == "GaviTrib2")] = "GaviTribs"
 
-test <- df%>%drop_na(VaisalaType)
 
 ###box and wisker####
 anova.co2 <- aov(log(adjusted_ppm) ~ name, data = df)
 summary(anova.co2)
 
-anova.flux <- aov(log1p(F_CO2) ~ name, data = df)
+anova.flux <- aov(log1p(F_mol_m2_d_eq1) ~ name, data = df)
 summary(anova.flux)
 
-anova.k600 <- aov(log1p(k600_eq1) ~ name, data = df)
+anova.k600 <- aov(log1p(k600_eq1_final) ~ name, data = df)
 summary(anova.k600)
 
 tukey.co2<-TukeyHSD(anova.co2)
@@ -365,15 +363,16 @@ MyTheme <-  theme_bw() +
   theme(legend.text=element_text(size=16))
 
 air_ppm <- 416.45
-CO2 <- ggplot(df%>%drop_na(VaisalaType), aes(x = name_2, y = log10(adjusted_ppm), fill = name_2)) +
+CO2 <- ggplot(df, aes(x = name_2, y = adjusted_ppm, fill = name_2)) +
   geom_boxplot() +
   geom_jitter(shape=18,position=position_jitter(0.1)) +
    stat_summary(fun = "mean", geom = "point", shape = 23, size = 3, color = "black",fill="white")+
   geom_hline(yintercept= log10(air_ppm),color="red",linetype="twodash", linewidth=1) +
+  scale_y_log10() +
   MyTheme
 
 
-flux <- ggplot(df%>%drop_na(x), aes(x = name_2, y = F_CO2, fill = name_2)) + 
+flux <- ggplot(df, aes(x = name_2, y = F_mol_m2_d_eq1, fill = name_2)) + 
   geom_boxplot() +
   geom_jitter(shape=18,position=position_jitter(0.1)) +
    stat_summary(fun = "mean", geom = "point", shape = 23, size = 3, color = "black",fill="white")+
@@ -381,11 +380,12 @@ flux <- ggplot(df%>%drop_na(x), aes(x = name_2, y = F_CO2, fill = name_2)) +
   MyTheme
 
 
-k600 <- ggplot(df%>%drop_na(x), aes(x = name_2, y = k600_eq1, fill = name_2)) + 
+k600 <- ggplot(df%>%drop_na(x), aes(x = name_2, y = k600_eq1_final, fill = name_2)) + 
   geom_boxplot() +
   geom_jitter(shape=18,position=position_jitter(0.1)) +
    stat_summary(fun = "mean", geom = "point", shape = 23, size = 3, color = "black",fill="white") +
-  scale_y_log10()
+  scale_y_log10()+
+  MyTheme
   
 slope <- ggplot(df%>%drop_na(x), aes(x = name_2, y = slope)) + 
   geom_boxplot() +
@@ -429,29 +429,31 @@ for > 20 ha, co2 is not significant, but watershed size is. pvalue = 0.00395 r2 
 ```{r fig 6, echo=FALSE}
 
 df_sats <- df
-df_sats$co2_scale <-scale(df_sats$pCO2_ppm)
-df_sats$WS_scale <- scale(df_sats$CatchmentSize_ha)
+df_sats$co2_scale <-scale(df_sats$adjusted_ppm)
+df_sats$WS_scale <- scale(df_sats$catchment_ha)
 
-model1_1 <- lm(log1p(F_CO2_umol_m2_s) ~ log1p(pCO2_ppm), 
-             data = df_sats %>%filter(F_CO2_umol_m2_s>-1)%>%filter(CatchmentSize_ha<12.5))
+model1_1 <- lm(log1p(F_mol_m2_d_eq1) ~ log1p(adjusted_ppm), 
+             data = df_sats %>%#filter(F_CO2_umol_m2_s>-1)%>%
+               filter(catchment_ha<12.5))
 summary(model1_1)
 
 ols_plot_resid_qq(model1_1)
 ols_test_normality(model1_1)
 
 #
-model2_2 <- lm(log1p(F_CO2_umol_m2_s) ~  log(CatchmentSize_ha), 
-             data = df_sats%>%filter(CatchmentSize_ha>20)%>%filter(F_CO2_umol_m2_s>-1))
+model2_2 <- lm(log1p(F_mol_m2_d_eq1) ~  log(catchment_ha), 
+             data = df_sats %>%filter(catchment_ha>20)#%>%filter(F_CO2_umol_m2_s>-1)
+             )
 summary(model2_2)
 ols_plot_resid_qq(model2_2)
 ols_test_normality(model2_2)
 #
-model1_3 <- lm(log1p(F_CO2_umol_m2_s) ~  log(CatchmentSize_ha) + log(adjusted_ppm), 
-             data = df_sats%>%filter(F_CO2_umol_m2_s>-1))
+model1_3 <- lm(log1p(F_mol_m2_d_eq1) ~  log(catchment_ha) + log(adjusted_ppm), 
+             data = df_sats)
 summary(model1_3)
 
-model1_3 <- lm(log1p(F_CO2_umol_m2_s) ~  scale(log(CatchmentSize_ha)) + scale(log(adjusted_ppm)), 
-             data = df_sats%>%filter(F_CO2_umol_m2_s>-1))
+model1_3 <- lm(log1p(F_mol_m2_d_eq1) ~  scale(log(catchment_ha)) + scale(log(adjusted_ppm)), 
+             data = df_sats)
 summary(model1_3)
 
 ols_plot_resid_qq(model1_3)
@@ -469,9 +471,9 @@ MyTheme <-  theme_bw() +
 hex <- hue_pal()
 
 
-A <- ggplot(df%>%filter(CatchmentSize_ha<12.5),
-        aes(x=log10(adjusted_ppm), y=F_CO2_umol_m2_s)) +
-  geom_point(aes(fill=Wetland), 
+A <- ggplot(df %>%filter(catchment_ha<12.5),
+        aes(x=log10(adjusted_ppm), y=F_mol_m2_d_eq1)) +
+  geom_point(aes(fill=name), 
        color="black",pch=21, size=3) + 
   scale_y_log10() +
   geom_vline(xintercept= log10(air_ppm),color="red",linetype="twodash", linewidth=1) +
@@ -479,17 +481,14 @@ A <- ggplot(df%>%filter(CatchmentSize_ha<12.5),
   xlab("CO2 ppm") + 
   ylab(expression(paste("CO"[2]," Flux [",mu,"mol ", m^-2, s^-1,"]"))) +
   labs(linetype="LEGEND", color="LEGEND") +
-  scale_fill_manual(name="Stream Reach",labels=c("Antenas", "Gavil\u00e1n Tributary 1","Gavil\u00e1n Tributary 3"), values = c(antens, gavitrib1, gavitrib3)) +
-   scale_x_continuous(breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c("300","1,000","3,000","10,000")) + 
-  annotate("text", x = log10(1000), y = 2.1, label  = expression("p-value < .0001\n", r^2 ~ "=" ~ .48), size = 4) +
-   theme_bw()  + MyTheme 
+  scale_fill_manual(name="Stream Reach",labels=c("Antenas", "Gavil\u00e1n Tributary 1","Gavil\u00e1n Tributary 3"), values = c(antens, gavitrib1, gavitrib3)) + scale_x_log10()  + MyTheme 
 
 
 
-B <- ggplot(df_sats %>%filter(F_CO2_umol_m2_s>-.6)
-            %>%filter(CatchmentSize_ha>20),
-        aes(x=CatchmentSize_ha, y=F_CO2_umol_m2_s)) +
-  geom_point(aes(fill=Wetland), 
+B <- ggplot(df_sats %>%filter(F_mol_m2_d_eq1>-.6)
+            %>%filter(catchment_ha>20),
+        aes(x=catchment_ha, y=F_mol_m2_d_eq1)) +
+  geom_point(aes(fill=name), 
        color="black",pch=21, size=3) + 
   scale_y_log10() +
     scale_x_log10() +
@@ -500,7 +499,6 @@ B <- ggplot(df_sats %>%filter(F_CO2_umol_m2_s>-.6)
   scale_fill_manual(
     name="Stream Reach",
     labels=c( "Colmillo","Gavil\u00e1n","Gavil\u00e1n Tributary 2"),values = c(colmillo, gavi,gavitrib2))+
-  annotate("text", x = 60, y = 2.3, label  = expression("p-value = .0004\n", r^2 ~ "=" ~ .17), size = 4) +
    theme_bw()  + MyTheme
 
 
@@ -524,10 +522,9 @@ ggsave("fig5.png", plot = figure, device = NULL, path = NULL,
 
 
 ```{r fig 5 k600, echo=TRUE}
-
-
-p <- ggplot(df_wide_all, 
-            aes(x=CatchmentSize_ha,y=K600)) +
+df <- read.csv(here::here("ProcessedData/raymond_data_allsites_2024-09-16.csv"))
+p <- ggplot(df, 
+            aes(x=catchment_ha,y=k600_eq1_final)) +
   scale_y_log10() + scale_x_log10() +
   geom_point(size=2) +
   geom_smooth(method = "lm",color="black") +
@@ -601,264 +598,34 @@ full <- ggarrange(p2, p1, nrow = 2, common.legend = TRUE)
 
 ```
 
-bring in gavi tribs 1 and 2 data
-
-
-
- calculated mid row for plotting of sample points
-
-```{r add mid row ANTE, echo=FALSE}
-#add wetlands_4 column for future plotting
-df$Wetland_4 <- df$Wetland
-Tribs$Wetland_4 <- Tribs$Wetland
-df$Remove <- NA
-Tribs$Remove <- NA
-
-#ANTE
-
-ANTE <- df%>%filter(Wetland=="ANTE")
-ANTE <- ANTE[order(ANTE$dist),] 
-for (row in 1:nrow(ANTE)) {
-  ANTE$dist_mid[row] <- (ANTE$dist[row+1] - ANTE$dist[row])/2 + ANTE$dist[row]
-  ANTE$TotalFlux_mid[row] <- (ANTE$Totalflux_umolpers[row+1] - ANTE$Totalflux_umolpers[row])/2 + ANTE$Totalflux_umolpers[row]
-  }
-
-ANTE$dist_mid <- NA
-ANTE$TotalFlux_mid <- NA
-
-
-for (row in 1:nrow(ANTE)) { 
-  if(row==1){
-    ANTE$dist_mid[row] <-  0
-     ANTE$TotalFlux_mid[row] <- 0
-    } else{
-  ANTE$dist_mid[row] <- (ANTE$dist[row] - ANTE$dist[row-1])/2 + ANTE$dist[row-1]
-  ANTE$TotalFlux_mid[row] <- (ANTE$Totalflux_umolpers[row] - ANTE$Totalflux_umolpers[row-1])/2 + ANTE$Totalflux_umolpers[row-1]
-  }
-}
-
-```
-
-```{r add mid row GAVI, echo=FALSE}
-#GAVI-mainstem
-df_trash <- df%>%filter(Wetland=="Gavi-mainstem")
-df_trash <- df_trash[order(df_trash$dist),] 
-for (row in 1:nrow(df_trash)) {
-  df_trash$dist_mid[row] <- (df_trash$dist[row+1] - df_trash$dist[row])/2 + df_trash$dist[row]
-  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row+1] - df_trash$Totalflux_umolpers[row])/2 + df_trash$Totalflux_umolpers[row]
-  }
-
-df_trash$dist_mid <- NA
-df_trash$TotalFlux_mid <- NA
-
-for (row in 1:nrow(df_trash)) { 
-  if(row==1){
-    df_trash$dist_mid[row] <-  0
-     df_trash$TotalFlux_mid[row] <- 0
-    } else{
-  df_trash$dist_mid[row] <- (df_trash$dist[row] - df_trash$dist[row-1])/2 + df_trash$dist[row-1]
-  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row] - df_trash$Totalflux_umolpers[row-1])/2 + df_trash$Totalflux_umolpers[row-1]
-  }
-}
-GAVI <- df_trash
-
-GAVI <- GAVI%>%filter(dist_mid < 300 | dist_mid > 400)
-
-#GAVI$dist_mid<-replace(GAVI$dist_mid, GAVI$dist_mid>300&GAVI$dist_mid<400, NA)
-  
-#GAVI%>%filter(dist_mid < 300 | dist_mid > 400)
-
-GAVI_up <- df_trash%>%filter(dist_mid < 300)
-GAVI_up$Wetland_4 <- "Gavilan Inlet"
-GAVI_down <- df_trash%>%filter(dist_mid > 400)
-
-GAVI_down$Wetland_4 <- "Gavilan Outlet"
-GAVI_down$dist_mid <- GAVI_down$dist_mid - GAVI_down$dist[1]
-GAVI_down$TotalFlux_mid <- GAVI_down$TotalFlux_mid - GAVI_down$Totalflux_umolpers[1]
-GAVI_down$dist <- GAVI_down$dist - GAVI_down$dist[1]
-GAVI_down$Totalflux_umolpers <- GAVI_down$Totalflux_umolpers - GAVI_down$Totalflux_umolpers[1]
-GAVI_down$Remove <- "Remove"
-
-GAVI <- rbind(GAVI,GAVI_down,GAVI_up)
-
-```
-
-```{r add mid row COLM, echo=FALSE}
-#	COLMILLO
-df_trash <- df%>%filter(Wetland=="COLM")
-df_trash <- df_trash[order(df_trash$dist),] 
-
-df_trash$Totalflux_umolpers <- df_trash$Totalflux_umolpers - df_trash$Totalflux_umolpers[1]
-df_trash$dist <- df_trash$dist - df_trash$dist[1]
-df_trash <- df_trash[-1,]
-
-
-df_trash <- df_trash[order(df_trash$dist),] 
-
-for (row in 1:nrow(df_trash)) {
-  df_trash$dist_mid[row] <- (df_trash$dist[row+1] - df_trash$dist[row])/2 + df_trash$dist[row]
-  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row+1] - df_trash$Totalflux_umolpers[row])/2 + df_trash$Totalflux_umolpers[row]
-  }
-
-df_trash$dist_mid <- NA
-df_trash$TotalFlux_mid <- NA
-
-for (row in 1:nrow(df_trash)) { 
-  if(row==1){
-    df_trash$dist_mid[row] <-  0
-     df_trash$TotalFlux_mid[row] <- 0
-    } else{
-  df_trash$dist_mid[row] <- (df_trash$dist[row] - df_trash$dist[row-1])/2 + df_trash$dist[row-1]
-  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row] - df_trash$Totalflux_umolpers[row-1])/2 + df_trash$Totalflux_umolpers[row-1]
-  }
-}
-COLM <- df_trash
-
-```
-
-```{r add mid row tribs, echo=FALSE}
-
-#	GAVI Trib 1
-df_trash <- Tribs%>%filter(Wetland=="Tributary 1")%>%drop_na(Flux_ave)
-df_trash <- df_trash[order(df_trash$dist),] 
-for (row in 1:nrow(df_trash)) {
-  df_trash$dist_mid[row] <- (df_trash$dist[row+1] - df_trash$dist[row])/2 + df_trash$dist[row]
-  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row+1] - df_trash$Totalflux_umolpers[row])/2 + df_trash$Totalflux_umolpers[row]
-  }
-
-df_trash$dist_mid <- NA
-df_trash$TotalFlux_mid <- NA
-
-
-for (row in 1:nrow(df_trash)) { 
-  if(row==1){
-    df_trash$dist_mid[row] <-  0
-     df_trash$TotalFlux_mid[row] <- 0
-    } else{
-  df_trash$dist_mid[row] <- (df_trash$dist[row] - df_trash$dist[row-1])/2 + df_trash$dist[row-1]
-  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row] - df_trash$Totalflux_umolpers[row-1])/2 + df_trash$Totalflux_umolpers[row-1]
-  }
-}
-Trib1 <- df_trash
-
-#	GAVI Trib 2
-df_trash <- Tribs%>%filter(Wetland=="Tributary 2")%>%drop_na(Flux_ave)
-df_trash <- df_trash[order(df_trash$dist),] 
-for (row in 1:nrow(df_trash)) {
-  df_trash$dist_mid[row] <- (df_trash$dist[row+1] - df_trash$dist[row])/2 + df_trash$dist[row]
-  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row+1] - df_trash$Totalflux_umolpers[row])/2 + df_trash$Totalflux_umolpers[row]
-  }
-
-df_trash$dist_mid <- NA
-df_trash$TotalFlux_mid <- NA
-
-for (row in 1:nrow(df_trash)) { 
-  if(row==1){
-    df_trash$dist_mid[row] <-  0
-     df_trash$TotalFlux_mid[row] <- 0
-    } else{
-  df_trash$dist_mid[row] <- (df_trash$dist[row] - df_trash$dist[row-1])/2 + df_trash$dist[row-1]
-  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row] - df_trash$Totalflux_umolpers[row-1])/2 + df_trash$Totalflux_umolpers[row-1]
-  }
-}
-
-Trib2 <- df_trash
-
-```
-
-##bind together
-
-```{r bind df, echo=FALSE}
-df_all <- rbind(ANTE%>%select(Wetland_4,surface_area),GAVI%>%select(Wetland_4,surface_area),COLM%>%select(Wetland_4,surface_area),Trib1%>%select(Wetland_4,surface_area),Trib2%>%select(Wetland_4,surface_area))
-
-df1_1 <- df%>%filter(Wetland=="COLM")
-df1_1 <- df1_1[order(df1_1$dist),] 
-df1_1$Totalflux_umolpers <- df1_1$Totalflux_umolpers - df1_1$Totalflux_umolpers[1]
-df1_1$dist <- df1_1$dist - df1_1$dist[1]
-df1_1 <- df1_1[-1,]
-
-df1_2 <- df%>%filter(Wetland != "COLM")
-
-df1 <- rbind(df1_1,df1_2)
-
-df1$shape <- NA
-df1$dist_mid <- NA
-df1$TotalFlux_mid <- NA
-
-df1 <- df1[,c("dist","adjusted_ppm","Totalflux_umolpers","Wetland","Wetland_4","shape","Remove")]
-
-df2 <- rbind(ANTE,COLM,GAVI)
-df2$Totalflux_umolpers <- df2$TotalFlux_mid
-df2$dist <- df2$dist_mid
-df2$shape <- "shape"
-
-df3 <- rbind(Trib1,Trib2)
-df3$Totalflux_umolpers <- df3$TotalFlux_mid
-df3$dist <- df3$dist_mid
-df3$shape <- "shape"
-
-df2 <- df2[,c("dist","adjusted_ppm","Totalflux_umolpers","Wetland","Wetland_4","shape","Remove")]
-df3 <- df3[,c("dist","adjusted_ppm","Totalflux_umolpers","Wetland","Wetland_4","shape","Remove")]
-
-df1 <- rbind(df1,df2,df3)
-
-df_test<- df1%>%filter(Wetland!="GAVItrib1")%>%filter(Wetland!="GAVItrib2")%>%filter(Wetland!="GAVItrib3")
-df_test$Totalfux_gpers <- df_test$Totalflux_umolpers /1000000 *44
-write.csv(df_test%>%filter(Wetland_4 != "Gavilan Outlet")%>%filter(Wetland_4 != "Gavilan Inlet")%>%filter(Wetland_4 != "	
-Tributary 1")%>%filter(Wetland_4 != "	
-Tributary 2"), file=here::here('new_file.csv'), row.names=FALSE)
-```
 
 #plot
 
 
 ```{r bball fig, echo=FALSE}
+df <- read.csv(here::here("ProcessedData/raymond_data_allsites_2024-09-16.csv"))
 
-MyTheme <-  theme_bw() + 
-  theme(axis.text=element_text(size=18),
-        axis.title=element_text(size=24)) +
-  theme(legend.title = element_text(size=24),
-    legend.text=element_text(size=18))+
-  theme(aspect.ratio=1)
-
-
-bball <- ggplot(df_test%>%filter(Wetland_4 != "Gavilan Outlet")%>%filter(Wetland_4 != "Gavilan Inlet"),
-                aes(x=dist, y=Totalflux_umolpers, group=Wetland_4)) +
-  geom_line(aes(color=Wetland), size=3) +
-  geom_point(aes(shape = shape,fill=Wetland), size=2) +
-  ylab(expression(paste(""))) +
-  xlab("") +
-  scale_color_manual(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan-mainstem","Tributary 1","Tributary 2"), values=c(antens, colmillo, gavi,gavitrib1, gavitrib2)) +
-  scale_fill_manual(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan-mainstem","Tributary 1","Tributary 2"), values=c(antens, colmillo, gavi,gavitrib1, gavitrib2)) +
-  scale_linetype_discrete(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan-mainstem","Tributary 1","Tributary 2")) +
-  scale_shape_manual(name="Sample Point", labels=c("",""), values = 21) +
-  guides(fill=FALSE,color=FALSE,shape=FALSE) +
-  MyTheme
-
+bball <- ggplot(df, 
+                     aes(x=x, y=flux_sum, group=name)) +
+  geom_line(aes(color=name), linewidth=3) +
+  geom_point(aes(fill=name), size=1,shape=1)+
+    ylab(expression(paste("Cumulative CO"[2]," Flux [",mu,"mol ", s^-1,"]"))) +
+  xlab("Distance [m]")
+  theme_bw() 
 
 bball
 
-
-#"#F8766D" "#C49A00" "#53B400" "#00C094" "#00B6EB" "#A58AFF" "#FB61D7"
-
 #zoom in
-bball_zoom <- ggplot(df_test%>%filter(Wetland_4 != "Gavi-mainstem"), 
-                     aes(x=dist, y=Totalflux_umolpers, group=Wetland_4)) +
-  geom_line(aes(color=Wetland_4), size=3) +
-  geom_point(aes(shape = shape,fill=Wetland_4), size=2)+
-    ylab(expression(paste("Cumulative CO"[2]," Flux [",mu,"mol ", s^-1,"]"))) + 
-  xlab("Distance [m]") +
-  scale_color_manual(name="Stream Reach",
-                     labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2"), 
-                     values=c(antens, colmillo, gavi_in,gavi_out,gavitrib1, gavitrib2)) +
-  scale_linetype_discrete(name="Stream Reach",
-                          labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2")) +
-  scale_shape_manual(name="Sample Point", labels=c("",""), values = 21) +
-  scale_fill_manual(values=c(antens, colmillo, gavi_in,gavi_out,gavitrib1, gavitrib2)) +
+bball_zoom <- ggplot(df, 
+                     aes(x=x, y=flux_sum, group=name)) +
+  geom_line(aes(color=name), linewidth=3) +
+  geom_point(aes(fill=name), size=1,shape=1)+
+    ylab(expression(paste("Cumulative CO"[2]," Flux [",mu,"mol ", s^-1,"]"))) +
+  xlab("Distance [m]")  +
     guides(fill=FALSE) +
-  xlim(-10, 350) +
-  ylim(-20, 300) +
-  MyTheme 
+  xlim(-10, 500) +
+  ylim(-20, 800) +
+  theme_bw() 
 
 
 bball_zoom
@@ -866,473 +633,3 @@ bball_zoom
 #write.csv(df_test,here::here("ProcessedData/bball_dataframe.csv"))
 
 ```
-
-that worked! now I'm going to fiddle around to prefct it more
-
-```{r bball fig 2, echo=FALSE}
-
-bball_annotate <- bball + 
-  annotate("rect", xmin = -10, xmax = 350, ymin = -20, ymax = 300,
-  colour = "blue",alpha = .2)
-
-
-#zoom in
-bball_zoom_nolegend <- 
-  ggplot(df_test%>%filter(Wetland_4 != "Gavi-mainstem")
-       , aes(x=dist, y=Totalflux_umolpers, group=Wetland_4)) +
-  geom_line(aes(#linetype=Wetland_4,
-    color=Wetland_4),
-    size=3) +
-  geom_point(aes(shape = shape,fill=Wetland_4), size=2) +
-  ylab(expression(paste("Cumulative CO"[2]," Flux [",mu,"mol ", s^-1,"]"))) + 
-  xlab("Distance [m]") +
-  scale_color_manual(
-    name="Stream Reach",
-    labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2"),
-    values=c(antens, colmillo, gavi_in,gavi_out,gavitrib1, gavitrib2)) +
-  scale_linetype_discrete(
-    name="Stream Reach",
-    labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2")) +
-  scale_shape_manual(
-    name="Sample Point", 
-    labels=c("",""), values = 21) +
-  scale_fill_manual(
-values=c(antens, colmillo, gavi_in,gavi_out,gavitrib1, gavitrib2)) +
-    guides(fill=FALSE) +
-  xlim(-10, 350) +
-  ylim(-20, 300) +
-  MyTheme +
-  theme(legend.position = "none") 
-
-bball_zoom_nolegend
-
-
-#p <- bball + annotation_custom(ggplotGrob(bball_zoom_nolegend), xmin = 1, xmax = 400, 
-#                       ymin = 1000, ymax = 1500)
-
-
-
-
-# Extract the legend. Returns a gtable
-leg <- get_legend(bball)
-leg2 <- get_legend(bball_zoom)
-
-
-# Convert to a ggplot and print
-as_ggplot(leg)
-as_ggplot(leg2)
-
-
-ggsave("testing123.png",plot = bball, dpi = 360, units = "cm")
-
-ggsave("testing123.png", plot = bball, device = NULL, path = NULL,
-       scale = 1, width = 25, height = 20, dpi = 360, limitsize = TRUE,
-       units = c("cm"))
-
-
-#0-500 m
-#0- 400
-#filled circle sample color as ln but outer in black
-
-```
-
-#the last one will be conceptual!!!! 
-include k600, co2, flux rate AND conceptual for total flux bom baby
-
-
-```{r stats, echo=FALSE}
-
-
-model <- lm(Flux_ave ~ log10(adjusted_ppm) + WatershedSize_ha, 
-             data = df%>%filter(WatershedSize_ha<12.5)
-)
-summary(model)
-
-model <- lm(Flux_ave ~ log10(adjusted_ppm) + WatershedSize_ha, 
-             data = df%>%filter(WatershedSize_ha>20)
-)
-summary(model)
-
-
-MyTheme <-  theme_bw() + 
-  theme(axis.text=element_text(size=14),
-        axis.title=element_text(size=16)) +
-  theme(legend.title = element_text(size=18),
-    legend.text=element_text(size=16))
-
-
-ggplot(df%>%filter(WatershedSize_ha>12.5),
-       #%>%drop_na(adjusted_ppm) #%>% filter(dist<250)
-        aes(x=WatershedSize_ha, y=Flux_ave)) +
-  geom_point(aes(fill=Wetland), 
-       color="black",pch=21, size=5) + 
-  geom_smooth(method='lm') +
-  xlab("CO2 ppm") + ylab("CO2 Flux (umol per m2 per s)") +labs(linetype="LEGEND", color="LEGEND") +
- # scale_fill_discrete(name="Stream Reach",labels=c("Antenas", "Gavilan Tributary 1","Gavilan Tributary 2")) +
-   scale_x_continuous(breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c(300,"1,000","3,000","10,000")) +
-   theme_bw()  + MyTheme
-
-
-```
-
-```{r fig 2, echo=TRUE}
-
-
-ggplot(df
-       , aes(x = dist, y = Flux_ave, color=Wetland_2)) +
-  facet_wrap(~Wetland, scales = "free")+
-  geom_point(size=3) +
-  theme_bw() + 
-  ylab("CO2 flux (umol/m2/s)") + 
-  xlab("Catchment Size (Hectares)") +
-    geom_smooth(method='lm')+
-  theme(axis.text=element_text(size=10),
-  axis.title=element_text(size=18,face="bold"))
-
-
-
-
-```
-
-
-
-
-
-
-
-##fig 3
-
-
-```{r test figs, echo=FALSE}
-####
-
-ggplot(df%>% filter(RASTERVALU>2000),
-       #%>%drop_na(adjusted_ppm) #%>% filter(dist<250)
-       aes(x=log10(adjusted_ppm), y=Flux_ave)) +
-  geom_point(aes(color=Wetland)) + 
-#  geom_smooth(method='lm') +
-  xlab("CO2 ppm") + ylab("CO2 Flux (umol per m2 per s)") +labs(linetype="LEGEND", color="LEGEND") +
-  scale_color_discrete(name="LEGEND",labels=c("Colmillo", "Gavilan Mainstem","Gavilan Tributary")) +
-  scale_x_continuous(breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c(300,1000,3000,10000)) +
-  #  scale_color_manual(name="LEGEND",labels=c("blah", "GAVItrib2","GAVItrib3_1","GAVItrib3_2")) +
-  theme_bw() 
-
-
-ggplot(df #%>% filter(adjusted_ppm>2000)
-       ,
-       #%>%drop_na(adjusted_ppm) #%>% filter(dist<250)
-       aes(x=log10(adjusted_ppm), y=Flux_ave)) +
-  geom_point(aes(color=Wetland)) + 
-#  geom_smooth(method='lm') +
-  xlab("CO2 ppm") + ylab("CO2 Flux (umol per m2 per s)") +labs(linetype="LEGEND", color="LEGEND") +
- # scale_color_discrete(name="LEGEND",labels=c("Colmillo", "Gavilan Mainstem","Gavilan Tributary")) +
-  scale_x_continuous(breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c(300,1000,3000,10000)) +
-  #  scale_color_manual(name="LEGEND",labels=c("blah", "GAVItrib2","GAVItrib3_1","GAVItrib3_2")) +
-  theme_bw() 
-
-ggplot(df #%>% filter(adjusted_ppm>2000)
-       %>%filter(Wetland=="ANTE")%>%filter(dist>0)
-       ,
-       aes(x=dist, y=log10(adjusted_ppm))) +
-  geom_point(aes(color=Wetland)) + 
-  theme_bw() 
-
-# Extract the legend. Returns a gtable
-leg <- get_legend(p1)
-
-# Convert to a ggplot and print
-as_ggplot(leg)
-
-
-p2 <- ggplot(df %>%filter(Wetland=="ANTE")
-       , aes(x = dist, y = adjusted_ppm))+
-  geom_point(size=3,color="#F8766D") +
-  ylab(expression(paste(italic('p'),"CO"[2] ," [ppm]"))) + xlab("Distance downstream [m]") +
-      geom_smooth(method='lm', color="#F8766D")+
-  theme(axis.text=element_text(size=10), axis.title=element_text(size=18,face="bold")) +
-  theme_classic() +
-  theme(panel.spacing = unit(.05, "lines"),
-        panel.border = element_rect(color = "black", fill = NA, size = 1), 
-        strip.background = element_rect(color = "black", size = 1))+ 
-  theme( strip.text.x = element_blank() )+ 
-  theme(axis.text=element_text(size=14),
-        axis.title=element_text(size=16)) +
-  theme(legend.text=element_text(size=16))+
-  theme(aspect.ratio=1)+
-  theme(legend.position = "none") 
-
-
-p3 <- ggplot(df %>%filter(Wetland=="GAVItrib1")
-       , aes(x = dist, y = adjusted_ppm))+
-#  facet_grid(.~Wetland, scales = "free") +
-#  ylim(-1000,15000)+
-  geom_point(size=3,color="#00BA38") +
-  ylab(expression(paste(italic('p'),"CO"[2] ," [ppm]"))) +
-  xlab("Distance downstream [m]") +
-      geom_smooth(method='lm',color="#00BA38")+
-  theme(axis.text=element_text(size=10),
-  axis.title=element_text(size=18,face="bold")) +
-  theme_classic() +
-  theme(panel.spacing = unit(.05, "lines"),
-        panel.border = element_rect(color = "black", fill = NA, size = 1), 
-        strip.background = element_rect(color = "black", size = 1))+ 
-  theme( strip.text.x = element_blank() )+ 
-  theme(axis.text=element_text(size=14),
-        axis.title=element_text(size=16)) +
-  theme(legend.text=element_text(size=16))+
-  theme(aspect.ratio=1)+
-  theme(legend.position = "none") 
-
-p4 <- ggplot(df %>%filter(Wetland=="GAVItrib2")
-       , aes(x = dist, y = adjusted_ppm))+
-#  facet_grid(.~Wetland, scales = "free") +
-#  ylim(-1000,15000)+
-  geom_point(size=3,color="#619CFF") +
-  ylab(expression(paste(italic('p'),"CO"[2] ," [ppm]"))) +
-  xlab("Distance downstream [m]") +
-      geom_smooth(method='lm',color="#619CFF")+
-  theme(axis.text=element_text(size=10),
-  axis.title=element_text(size=18,face="bold")) +
-  theme_classic() +
-  theme(panel.spacing = unit(.05, "lines"),
-        panel.border = element_rect(color = "black", fill = NA, size = 1), 
-        strip.background = element_rect(color = "black", size = 1))+ 
-  theme( strip.text.x = element_blank() )+ 
-  theme(axis.text=element_text(size=14),
-        axis.title=element_text(size=16)) +
-  theme(legend.text=element_text(size=16))+
-  theme(aspect.ratio=1)+
-  theme(legend.position = "none") 
-
-p1 <- as_ggplot(leg)
-p2
-p3
-p4
-```
-
-
-Just  little bit of data cleaning needed. I don't like the 
-```{r clean  data}
-
-```
-
-#stream profiles
-
-```{r profiles, echo=FALSE}
-GAVI <- df%>%filter(Wetland_2=="Gavi-mainstem")
-ANTE <- df%>%filter(Wetland_2=="ANTE")
-COLM <- df%>%filter(Wetland_2=="COLM")
-
-ANTE$dist_ANTE <- ANTE$dist
-ANTE$dist_COLM <- NA
-ANTE$dist_GAVI <- NA
-
-COLM$dist_COLM <- COLM$dist
-COLM$dist_ANTE <- NA
-COLM$dist_GAVI <- NA
-
-GAVI$dist_GAVI <- GAVI$dist
-GAVI$dist_ANTE <- NA
-GAVI$dist_COLM <- NA
-GAVI <- GAVI%>%drop_na(Date)
-
-GAVI_sub <- GAVI%>%filter(dist > 462 & dist < 570)
-
-df <- rbind(ANTE,COLM,GAVI)
-
-###
-
-hex <- hue_pal()
-
-Profile <- ggplot(data=df ) +
-  geom_line(aes(dist_ANTE, ele_fit), size = 4, color="grey") +
-  geom_line(aes(dist_GAVI, ele_fit), size = 4, color="grey") +
-  geom_line(aes(dist_COLM, ele_fit), size = 4, color="grey") +
-  geom_point(aes(dist_ANTE, ele_fit), size = 4, shape=21, fill=hex(3)[1],color="black") +
-  geom_point(aes(dist_GAVI, ele_fit), size = 4, shape=21, fill=hex(3)[3],color="black") +
-  geom_point(aes(dist_COLM, ele_fit), size = 4, shape=21, fill=hex(3)[2],color="black") +
-  labs(y="Elevation [m]", x = "Distance [m]")  +
-  theme_classic() + My_Theme 
-
-
-Profile
-ggsave("streamprofil_2.png", plot = Profile, device = NULL, path = NULL,
-       scale = 1, width = 10, height = 10, dpi = 360, limitsize = TRUE,
-       units = c("cm"))
-
-####
-
-Profile <- ggplot(data=df ) +
-  geom_line(aes(dist_ANTE, ele_fit), size = 2, alpha=.25) +
-  geom_line(aes(dist_GAVI, ele_fit), size = 2, alpha=.5) +
-  geom_line(aes(dist_COLM, ele_fit), size = 2,alpha=.5) +
-#  geom_point(data=df%>%drop_na(Flux_ave), aes(dist, ele_fit, color= Flux_ave),size=3)+
-#  scale_color_gradient(
-#  low = "blue", high = "red",
-#    space = "Lab",
-#    na.value = "grey50",
-#    guide = "colourbar",
-#    aesthetics = "colour",
-#    name = "Flux umol m^2 s^-1"
-#  )+  
-  labs(y="elevation", x = "distance")  +
-
-  theme_classic() + My_Theme + theme(legend.position = c(0.8, 0.9))
-
-
-```
-
-##doc plot
-
-```{r water chem, echo=FALSE}
-
-
-DOC <- ggplot(df, aes(x = Wetland_2, y = DOC, fill = Wetland_2)) + 
-  geom_boxplot() +
-  geom_jitter(shape=1,position=position_jitter(0.1)) +
-   stat_summary(fun = "mean", geom = "point", shape = 23, size = 3, color = "black",fill="white")+
-  MyTheme +
-    ylab(expression(paste("DOC [ mg", L^-1,"]"))) +
-  scale_fill_discrete(name=NULL) #+
-#  annotate("text", x="Gavilan Tributaries", y= 5,label="BC", size = 5) +
-#  annotate("text", x="Antenas", y= 5,label="A", size = 5) +
-#  annotate("text", x="Gavilan Mainstem", y= 5,label="AC", size = 5) +
-#  annotate("text", x="Colmillo", y= 5,label="B", size = 5)
-
-```
-
-
-# not a figure but something amanda commented on
-If you assumed CO2 were conservative (like SF6) how would the K along a reach compare to what you measured?  If the K along the whole reach is higher, then can you make conclusions about additional CO2 produced/contributed over the reach?
-
-Concentrations exceeded 10,000 ppm and decreased to below 2,000 ppm within 200 meters.
-
-```{r amanda, echo=FALSE}
-
-df_amanda <- df %>%drop_na(Wetland)%>%#filter(Wetland_4!="Gavilan Inlet")%>%filter(Wetland!="COLM")%>%filter(Wetland!="GAVItrib3")%>%
-  filter(dist<200)%>%select(Wetland_4,dist,width,CatchmentSize_ha,adjusted_ppm,F_CO2_umol_m2_s,KH_mol.l.atm,k_m_d,K600)
-
-df_a_summary <- df_amanda%>%
-  group_by(Wetland_4)%>%
-  summarise(
-    dist_min = min(dist,na.rm = TRUE),
-    dist_max = max(dist,na.rm = TRUE),
-    width_ave = mean(width,na.rm = TRUE),
-    pCO2_max = max(adjusted_ppm,na.rm = TRUE),
-    pCO2_min = min(adjusted_ppm,na.rm = TRUE),
-    F_CO2_umol_m2_s_ave = mean(F_CO2_umol_m2_s,na.rm = TRUE),
-    k_m_d_ave = mean(k_m_d,na.rm = TRUE),
-    Kh_ave = mean(KH_mol.l.atm,na.rm = TRUE)
-  )
-
-df_a_summary$total_dist <- df_a_summary$dist_max - df_a_summary$dist_min 
-df_a_summary$area_m2 <- df_a_summary$width_ave/100 * df_a_summary$total_dist
-
-Wetland_4 <- c("ANTE","GAVItrib1","GAVItrib2","Gavilan Inlet","Gavilan Outlet","COLM")
-Q_L_s <- c(1.6,.25,.305,1.01,15.17,74.22)
-Q_df <- data.frame(Wetland_4, Q_L_s)
-
-df_a_summary <- left_join(df_a_summary,Q_df,by="Wetland_4")
-
-df_a_summary$fluxCALC_umol_m2_s <- (df_a_summary$pCO2_max*df_a_summary$Kh_ave - df_a_summary$pCO2_min*df_a_summary$Kh_ave) * df_a_summary$Q_L_s / (df_a_summary$area_m2)
-
-###
-#k = F/(Kh * ((pCO2max + pCO2min)/2 - pCO2air))
-df_a_summary$kCALC_m_d <- df_a_summary$fluxCALC_umol_m2_s * 86400 /  ((df_a_summary$Kh_ave*df_a_summary$pCO2_max + df_a_summary$Kh_ave*df_a_summary$pCO2_min)/2 - df_a_summary$Kh_ave * 416.45)
-
-view(df_a_summary) 
-
-####more than 
-
-
-# F = (C1 - C2)*Q/(A)
-# C1 - F*A/Q  = C2
-
-
-df_amanda <- df %>%drop_na(Wetland)%>%#filter(Wetland_4!="Gavilan Inlet")%>%filter(Wetland!="COLM")%>%filter(Wetland!="GAVItrib3")%>%
-  filter(dist<200)%>%select(Wetland_4,dist,width,CatchmentSize_ha,adjusted_ppm,F_CO2_umol_m2_s,KH_mol.l.atm,k_m_d,K600)
-
-
-df_a_summary <- df_amanda%>%
-  group_by(Wetland_4)%>%
-  summarise(
-    dist_min = min(dist,na.rm = TRUE),
-    dist_max = max(dist,na.rm = TRUE),
-    width_ave = mean(width,na.rm = TRUE),
-    pCO2_max = max(adjusted_ppm,na.rm = TRUE),
-    pCO2_min = min(adjusted_ppm,na.rm = TRUE),
-    F_CO2_umol_m2_s_ave = mean(F_CO2_umol_m2_s,na.rm = TRUE),
-    k_m_d_ave = mean(k_m_d,na.rm = TRUE),
-    Kh_ave = mean(KH_mol.l.atm,na.rm = TRUE)
-  )
-
-df_a_summary$total_dist <- df_a_summary$dist_max - df_a_summary$dist_min 
-df_a_summary$area_m2 <- df_a_summary$width_ave/100 * df_a_summary$total_dist
-
-Wetland_4 <- c("ANTE","GAVItrib1","GAVItrib2","Gavilan Inlet","Gavilan Outlet","COLM")
-Q_L_s <- c(1.6,.25,.305,1.01,15.17,74.22)
-Q_df <- data.frame(Wetland_4, Q_L_s)
-
-
-df_a_summary <- left_join(df_a_summary,Q_df,by="Wetland_4")
-
-# F = (C1 - C2)*Q/(A*86400)
-# C1 - F*A/Q  = C2
-#pCO2 = (C1 - F*A/Q) / kh
-
-
-df_a_summary$CALC_pCO2_min <- (df_a_summary$pCO2_max*df_a_summary$Kh_ave - df_a_summary$F_CO2_umol_m2_s_ave* df_a_summary$area_m2 / df_a_summary$Q_L_s )/df_a_summary$Kh_ave
-
-df_a_summary$pCO2_dif <- (df_a_summary$CALC_pCO2_min - df_a_summary$pCO2_min)/(df_a_summary$CALC_pCO2_min + df_a_summary$pCO2_min)*100
-
-view(df_a_summary)
-
-
-
-####more than 
-
-
-# F = (C1 - C2)*Q/(A)
-# C1 - F*A/Q  = C2
-
-
-df_amanda <- df %>%drop_na(Wetland)%>%filter(CatchmentSize_ha > 12.5)%>%select(Wetland_4,dist,width,CatchmentSize_ha,adjusted_ppm,F_CO2_umol_m2_s,KH_mol.l.atm,k_m_d,K600)
-
-
-df_a_summary <- df_amanda%>%
-  group_by(Wetland_4)%>%
-  summarise(
-    dist_min = min(dist,na.rm = TRUE),
-    dist_max = max(dist,na.rm = TRUE),
-    width_ave = mean(width,na.rm = TRUE),
-    pCO2_max = max(adjusted_ppm,na.rm = TRUE),
-    pCO2_min = min(adjusted_ppm,na.rm = TRUE),
-    F_CO2_umol_m2_s_ave = mean(F_CO2_umol_m2_s,na.rm = TRUE),
-    k_m_d_ave = mean(k_m_d,na.rm = TRUE),
-    Kh_ave = mean(KH_mol.l.atm,na.rm = TRUE)
-  )
-
-df_a_summary$total_dist <- df_a_summary$dist_max - df_a_summary$dist_min 
-df_a_summary$area_m2 <- df_a_summary$width_ave/100 * df_a_summary$total_dist
-
-Wetland_4 <- c("ANTE","GAVItrib1","GAVItrib2","Gavilan Inlet","Gavilan Outlet","COLM")
-Q_L_s <- c(1.6,.25,.305,1.01,15.17,74.22)
-Q_df <- data.frame(Wetland_4, Q_L_s)
-
-df_a_summary <- left_join(df_a_summary,Q_df,by="Wetland_4")
-
-# F = (C1 - C2)*Q/(A*86400)
-# C1 - F*A/Q  = C2
-#pCO2 = (C1 - F*A/Q) / kh
-
-
-df_a_summary$CALC_pCO2_min <- (df_a_summary$pCO2_max*df_a_summary$Kh_ave - df_a_summary$F_CO2_umol_m2_s_ave* df_a_summary$area_m2 / df_a_summary$Q_L_s )/df_a_summary$Kh_ave
-
-df_a_summary$pCO2_dif <- (df_a_summary$CALC_pCO2_min - df_a_summary$pCO2_min)/(df_a_summary$CALC_pCO2_min + df_a_summary$pCO2_min)*100
-
-view(df_a_summary)
-
-
-```
-
-
